[gd_scene load_steps=15 format=3 uid="uid://b5rn8w3q10x2s"]

[ext_resource type="Script" path="res://scenes/action_scene.gd" id="1_c80d2"]
[ext_resource type="PackedScene" uid="uid://b8d5qitc3sv5w" path="res://scenes/player.tscn" id="2_2u74y"]
[ext_resource type="Shader" path="res://scenes/action_scene.gdshader" id="2_40yh5"]
[ext_resource type="Texture2D" uid="uid://cmq1weukefvud" path="res://art/Backgrounds/BG_Action.png" id="3_dr2eh"]
[ext_resource type="PackedScene" uid="uid://o0ffnsuxnkkf" path="res://scenes/collectibles/powerup_shield.tscn" id="5_gde0x"]
[ext_resource type="PackedScene" uid="uid://kograic2lq3w" path="res://scenes/weapon/missile.tscn" id="6_6t1jw"]
[ext_resource type="PackedScene" uid="uid://cqcvtruflgkfm" path="res://scenes/collectibles/powerup_fuel.tscn" id="6_tty3p"]
[ext_resource type="PackedScene" uid="uid://cnhsb76yoj520" path="res://scenes/collectibles/powerup_missile.tscn" id="7_p2t0q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3pqc3"]
size = Vector2(800, 960)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_opcbo"]
b = Vector2(0, 960)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_63lpn"]
a = Vector2(800, 0)
b = Vector2(800, 960)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mr56y"]
b = Vector2(800, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ikou8"]
a = Vector2(0, 960)
b = Vector2(800, 960)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y752m"]
shader = ExtResource("2_40yh5")
shader_parameter/direction = Vector2(0, -1)
shader_parameter/speed_scale = 0.5

[node name="action_scene" type="Node2D"]
script = ExtResource("1_c80d2")

[node name="visible" type="Area2D" parent="."]
collision_mask = 380

[node name="shape" type="CollisionShape2D" parent="visible"]
position = Vector2(400, 480)
shape = SubResource("RectangleShape2D_3pqc3")

[node name="bounds" type="StaticBody2D" parent="visible"]
collision_layer = 128
collision_mask = 2

[node name="left" type="CollisionShape2D" parent="visible/bounds"]
shape = SubResource("SegmentShape2D_opcbo")

[node name="right" type="CollisionShape2D" parent="visible/bounds"]
shape = SubResource("SegmentShape2D_63lpn")

[node name="top" type="CollisionShape2D" parent="visible/bounds"]
shape = SubResource("SegmentShape2D_mr56y")

[node name="bottom" type="CollisionShape2D" parent="visible/bounds"]
shape = SubResource("SegmentShape2D_ikou8")

[node name="Background" type="Node2D" parent="visible"]

[node name="BG_Layer1" type="TextureRect" parent="visible/Background"]
material = SubResource("ShaderMaterial_y752m")
offset_right = 802.0
offset_bottom = 960.0
texture = ExtResource("3_dr2eh")
stretch_mode = 1

[node name="player" parent="." instance=ExtResource("2_2u74y")]
position = Vector2(400, 800)
scale = Vector2(0.4, 0.4)

[node name="asteroid_spawn" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="clock" type="Timer" parent="."]
autostart = true

[node name="powerup_shield" parent="." instance=ExtResource("5_gde0x")]
position = Vector2(674, 138)
content = ExtResource("6_6t1jw")

[node name="powerup_fuel" parent="." instance=ExtResource("6_tty3p")]
position = Vector2(164, 314)

[node name="powerup_missile" parent="." instance=ExtResource("7_p2t0q")]
position = Vector2(278, 161)
content = ExtResource("6_6t1jw")

[connection signal="area_exited" from="visible" to="." method="_on_visible_area_exited"]
[connection signal="collected" from="player" to="." method="_on_player_collected"]
[connection signal="hp_changed" from="player" to="." method="_on_player_hp_changed"]
[connection signal="shield_onoff" from="player" to="." method="_on_player_shield_onoff"]
[connection signal="timeout" from="asteroid_spawn" to="." method="_on_asteroid_spawn_timeout"]
[connection signal="timeout" from="clock" to="." method="_on_clock_timeout"]
